<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/helloText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/please_fill_in_the_form"
        android:textColor="#4B0082"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_text"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_of_tickets"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_e_mail_address"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="20sp" />


</LinearLayout>